edited bio, added skills

--- a/bio.html
+++ b/bio.html
@@ -15,15 +15,27 @@
     <body>
        <div class="container">
          <div class="row">
-            
-            <div class="col s12 m4 l4">
-               <img class="coverimages" src="me.jpg">
-            </div>
-            <div class="col s12 m8 l8"><p>I am a data science enthusiast with adequate training and experience in statistics, software engineering and agribusiness management. I have a passion for turning data into meaningful information.My main areas of expertise are web applications using ruby on rails, android development, statistics and project management.</p></div>
+            <div class="col s12 m12 l12"><p>I am a data science enthusiast
+              with adequate training and experience in statistics, software
+              engineering and agribusiness management. I have a passion for
+              turning data into meaningful information.My main areas of expertise
+              are web apps development using ruby on rails, android development, statistics
+               and project management.</p>
+
+              <p>
+                I love playing basket ball, badminton and drinking beer as I watch Arsenal beat Man U and other
+                funny teams.
+              </p>
+
+              <p>
+                Going for random trips and events is awesome.....I like it too..
+              </p>
+
+             </div>
         </div>
        </div>
-     
-   
+
+
       <!--Import jQuery before materialize.js-->
         <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="materialize.min.js"></script>
